Add shimmer_animation library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http_cache_file_store: ^2.0.1
   path_provider: ^2.1.5
   json_annotation: ^4.9.0
+  shimmer_animation: ^2.2.2
 
 dev_dependencies:
   flutter_test:
